Align app container to top to fix status bar gap

--- a/output.css
+++ b/output.css
@@ -507,9 +507,6 @@
       background-color: color-mix(in oklab, var(--color-black) 5%, transparent);
     }
   }
-  .bg-gray-800 {
-    background-color: var(--color-gray-800);
-  }
   .bg-white {
     background-color: var(--color-white);
   }
@@ -811,6 +808,11 @@
       height: 850px;
     }
   }
+  .sm\:items-center {
+    @media (width >= 40rem) {
+      align-items: center;
+    }
+  }
   .sm\:rounded-\[36px\] {
     @media (width >= 40rem) {
       border-radius: 36px;
@@ -825,6 +827,11 @@
   .sm\:border-gray-900 {
     @media (width >= 40rem) {
       border-color: var(--color-gray-900);
+    }
+  }
+  .sm\:bg-gray-800 {
+    @media (width >= 40rem) {
+      background-color: var(--color-gray-800);
     }
   }
 }
